--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -10,6 +10,11 @@
       <td mat-cell *matCellDef="let user">{{ user.name }}</td>
     </ng-container>
 
+    <ng-container matColumnDef="password">
+      <th mat-header-cell *matHeaderCellDef>Пароль</th>
+      <td mat-cell *matCellDef="let user">{{ user.password }}</td>
+    </ng-container>
+
     <ng-container matColumnDef="registrationDate">
       <th mat-header-cell *matHeaderCellDef>Дата регистрации</th>
       <td mat-cell *matCellDef="let user">{{ user.registerDate | date }}</td>
